/**
\page changelog Changelog

\section c018 version 0.17 -> 0.17+

 - Moved DMA code into it's own class (CDMA). (26-feb-2008, Camiel
   Vanderhoeven)
 - Shut down display refresh thread when emulator exits.
   (20-feb-2008, David Leonard)
 - Return SYSTEM RESOURCE FAILURE sense if dato/dati buffer size
   is exceeded in SCSI operations. (20-feb-2008, David Leonard)
 - Support MSF in READ TOC scsi command. (20-feb-2008, Brian
   Wheeler)
 - Show disk creation progress. (20-feb-2008, David Leonard)
 - Avoid 'Xlib: unexpected async reply' errors on Linux/Unix/BSD's
   by adding some thread interlocking. (20-feb-2008, David Leonard)
 - GNU compiler support on Windows. (20-feb-2008, Alex)
 - HCI register space for UISB added. (18-feb-2008, Brian Wheeler)
 - Added vital product data page 0 (Required for Tru64).
   (18-feb-2008, Brian Wheeler)
 - The READ CAPACITY scsi command now properly returns the number of
   the last LBA (n-1); not the number of LBA's (n). INITIALIZE now
   works properly on a scsi disk. (18-feb-2008, Camiel Vanderhoeven)
 - Added READ_LONG scsi command, and support for MODE_SENSE
   changeable parameter pages. (last bit needed to get SCSI
   working on OpenVMS) (16-feb-2008, Camiel Vanderhoeven)
 - The owner of the SCSI bus is allowed to re-arbitrate for it. 
   (16-feb-2008, Camiel Vanderhoeven)
 - Added Symbios 53C810 SCSI controller. (16-feb-2008, Camiel
   Vanderhoeven)
 - Moved keyboard code into it's own class. (CKeyboard). 
   (12-feb-2008, Camiel Vanderhoeven)
 - Show originating device name on memory errors. (08-feb-2008, 
   Camiel Vanderhoeven)
 - Set default keyboard translation to scanset 3 (PS/2). 
   (08-feb-2008, Camiel Vanderhoeven)
 - On GNU systems, display a backtrace when a segmentation fault
   occurs, and DEBUG_BACKTRACE has been defined. (07-feb-2008, Brian
   Wheeler)
 - Fixed registration of ROM expansion address. (06-feb-2008, Camiel
   Vanderhoeven)
 - Check for FPEN in old floating point code. (06-feb-2008, Camiel